# gputt

./: CMakeLists.txt  Config.cmake.in  LICENSE  README.md
examples/: example.py
include/: CudaMem.h  HipMem.h  LRUCache.h  TensorTester.h  cutt.h  cuttGpuModel.h  cuttTimer.h  cuttkernel.h  cuttplan.h  gpu_runtime.h  gputt.h  gputtGpuModel.h  gputtGpuModelKernel.h  gputtMemcpy.h  gputtTimer.h  gputtTypes.h  gputtUtils.h  gputt_internal.h  gputtkernel.h  gputtplan.h  hiptt.h  hipttGpuModel.h  hipttGpuModelKernel.h  hipttMemcpy.h  hipttTimer.h  hipttUtils.h  hipttkernel.h  hipttplan.h  int_vector.h
include/gputt/: gputt.h  gputt_runtime.h
src/: CudaMem.cpp  HipMem.hip  HipMemcpy.cu  HipUtils.cu  TensorTester.cu  TensorTester.hip  cutt.cpp  cutt.h  cuttGpuModel.cpp  cuttGpuModelKernel.cu  cuttTimer.cpp  cutt_test.cpp  cuttkernel.cu  cuttkernel.h  cuttplan.cpp  gputt.cu  gputtGpuModel.cu  gputtGpuModelKernel.cu  gputtMemcpy.cu  gputtTimer.cu  gputtUtils.cu  gputtkernel.cu  gputtplan.cu  hiptt.cu  hiptt.hip  hipttGpuModel.cu  hipttGpuModel.hip  hipttGpuModelKernel.cu  hipttGpuModelKernel.hip  hipttMemcpy.cu  hipttTimer.cu  hipttTimer.hip  hipttUtils.cu  hipttkernel.cu  hipttkernel.hip  hipttplan.cu  hipttplan.hip
src/bench/: bench.cpp  bench.cu  bench.hip
src/example/: example.cu
src/python/: cutt.cpp  cutt_module.cpp  gputt.cu  gputt_module.cu  hiptt.cu  hiptt.hip
src/test/: test.cpp  test.cu  test.hip
